k8s/route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: transcraibe-be-route
spec:
  parentRefs:
    - name: pod-gateway
      sectionName: https-listener
      kind: Gateway
      namespace: projectcontour
  hostnames:
    - "transcraibe.pod.nvtc.io"
  rules:
    - backendRefs:
        - name: transcraibe-svc
          port: 80
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: argocd-http-redirect-route
spec:
  parentRefs:
    - name: pod-gateway
      sectionName: http-listener
      kind: Gateway
      namespace: projectcontour
  hostnames:
    - "transcraibe.pod.nvtc.io"
  rules:
    - filters:
        - type: RequestRedirect
          requestRedirect:
            scheme: https
            statusCode: 301
